--- a/profiles/windsurf.toml
+++ b/profiles/windsurf.toml
@@ -7,6 +7,13 @@ binary = "windsurf"
 description = "Windsurf - Codeium's AI-native code editor"
 
 [environment]
+# Proxy configuration for network traffic
+# ${SANDBOX_PROXY} is expanded at sandbox launch time to http://127.0.0.1:8080
+HTTP_PROXY = "${SANDBOX_PROXY}"
+HTTPS_PROXY = "${SANDBOX_PROXY}"
+http_proxy = "${SANDBOX_PROXY}"
+https_proxy = "${SANDBOX_PROXY}"
+
 # Certificate configuration for TLS interception
 # ${SANDBOX_CA_CERT} is expanded at sandbox launch time to the ephemeral CA path
 SSL_CERT_FILE = "${SANDBOX_CA_CERT}"
