--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.100"
+bincode = "1.3"
 bytes = "1.10"
 chrono = { version = "0.4.42", features = ["clock", "serde"] }
 clap = { version = "4.5.54", features = ["derive", "env"] }
@@ -46,6 +47,8 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
 uuid = { version = "1.19.0", features = ["v4", "serde"] }
 which = "7.0"
+ratatui = "0.29"
+crossterm = "0.28"
 
 [dev-dependencies]
 assert_cmd = "2.1.1"
