🔧 Centralize sandbox env and add blocklist support
What does this PR do?

This PR centralizes proxy and CA certificate environment variables into the base sandbox configuration, eliminating duplication across tool
profiles. It also adds full blocklist support for domains, including persistent storage and interactive startup review of the allowlist.
Additionally, the CLI help has been improved with usage examples and proper shell escaping has been added for tool arguments.

Details

- Move proxy (HTTP_PROXY, HTTPS_PROXY) and CA cert (SSL_CERT_FILE, NODE_EXTRA_CA_CERTS) env vars to default sandbox config
- Remove duplicate environment variable definitions from claude, cursor, gemini, and windsurf profiles
- Add save_to_blocklist, remove_from_blocklist, remove_from_allowlist, and clear_allowlist methods to ConfigLoader
- Implement persistent blocklist storage in user allowlist.toml file
- Add interactive startup allowlist review with options to proceed, clear, edit, or quit
- Add CLI help examples showing -- separator usage for passing flags to wrapped tools
- Add shell_escape function to properly escape tool arguments for shell execution
- Merge base sandbox env with profile-specific env, allowing profiles to override defaults

Highlights

New default sandbox environment variables applied to all tools:

fn default_sandbox_env() -> HashMap<String, String> {
    let mut env = HashMap::new();
    env.insert("HTTP_PROXY".to_string(), "${SANDBOX_PROXY}".to_string());
    env.insert("HTTPS_PROXY".to_string(), "${SANDBOX_PROXY}".to_string());
    env.insert("http_proxy".to_string(), "${SANDBOX_PROXY}".to_string());
    env.insert("https_proxy".to_string(), "${SANDBOX_PROXY}".to_string());
    env.insert("SSL_CERT_FILE".to_string(), "${SANDBOX_CA_CERT}".to_string());
    env.insert("NODE_EXTRA_CA_CERTS".to_string(), "${SANDBOX_CA_CERT}".to_string());
    env.insert("REQUESTS_CA_BUNDLE".to_string(), "${SANDBOX_CA_CERT}".to_string());
    env
}

Shell escaping for safe command 

--- a/profiles/gemini.toml
+++ b/profiles/gemini.toml
@@ -6,18 +6,7 @@ display_name = "Gemini CLI"
 binary = "gemini"
 description = "Google Gemini CLI - AI-powered coding assistant"
 
-[environment]
-# Proxy configuration for network traffic
-# ${SANDBOX_PROXY} is expanded at sandbox launch time to http://127.0.0.1:8080
-HTTP_PROXY = "${SANDBOX_PROXY}"
-HTTPS_PROXY = "${SANDBOX_PROXY}"
-http_proxy = "${SANDBOX_PROXY}"
-https_proxy = "${SANDBOX_PROXY}"
-
-# Certificate configuration for TLS interception
-SSL_CERT_FILE = "${SANDBOX_CA_CERT}"
-NODE_EXTRA_CA_CERTS = "${SANDBOX_CA_CERT}"
-REQUESTS_CA_BUNDLE = "${SANDBOX_CA_CERT}"
+# Proxy and CA cert vars are inherited from base sandbox config
 
 [network]
 # Google/Gemini domains that need to be allowed
