--- a/profiles/cursor.toml
+++ b/profiles/cursor.toml
@@ -7,19 +7,8 @@ binary = "cursor"
 description = "Cursor - AI-first code editor built on VS Code"
 
 [environment]
-# Proxy configuration for network traffic
-# ${SANDBOX_PROXY} is expanded at sandbox launch time to http://127.0.0.1:8080
-HTTP_PROXY = "${SANDBOX_PROXY}"
-HTTPS_PROXY = "${SANDBOX_PROXY}"
-http_proxy = "${SANDBOX_PROXY}"
-https_proxy = "${SANDBOX_PROXY}"
-
-# Certificate configuration for TLS interception
-# ${SANDBOX_CA_CERT} is expanded at sandbox launch time to the ephemeral CA path
-SSL_CERT_FILE = "${SANDBOX_CA_CERT}"
-NODE_EXTRA_CA_CERTS = "${SANDBOX_CA_CERT}"
-
-# Cursor-specific API redirection
+# Cursor-specific environment variables
+# Proxy and CA cert vars are inherited from base sandbox config
 CURSOR_API_URL = "https://llm-gateway.corp/v1/cursor"
 
 [network]
